--- a/index.html
+++ b/index.html
@@ -10,5 +10,23 @@
 </head>
 <body>
     <h1>Chien W7 Review App</h1>
+    <input type="text" placeholder="description" id="descriptionIn">
+    <select id="sizeIn">
+        <option>tiny</option>
+        <option>small</option>
+        <option>medium</option>
+        <option>large</option>
+        <option>huge</option>
+        <option>ginormous</option>
+    </select>
+    <select id="colorIn">
+        <option>red</option>
+        <option>orange</option>
+        <option>yellow</option>
+        <option>green</option>
+        <option>blue</option>
+        <option>purple</option>
+    </select>
+    <button id="addItemButton">Add Item</button>
 </body>
 </html>
