displaying list on DOM

--- a/index.html
+++ b/index.html
@@ -28,5 +28,8 @@
         <option>purple</option>
     </select>
     <button id="addItemButton">Add Item</button>
+    <ul id="itemsOut">
+        
+    </ul>
 </body>
 </html>
