--- a/index.html
+++ b/index.html
@@ -29,7 +29,24 @@
     </select>
     <button id="addItemButton">Add Item</button>
     <ul id="itemsOut">
-        
+
     </ul>
+    <select id="sizeSearchIn">
+        <option>tiny</option>
+        <option>small</option>
+        <option>medium</option>
+        <option>large</option>
+        <option>huge</option>
+        <option>ginormous</option>
+    </select>
+    <select id="colorSearchIn">
+        <option>red</option>
+        <option>orange</option>
+        <option>yellow</option>
+        <option>green</option>
+        <option>blue</option>
+        <option>purple</option>
+    </select>
+    <button id="searchButton">Search</button>
 </body>
 </html>
