--- a/index.html
+++ b/index.html
@@ -48,5 +48,8 @@
         <option>purple</option>
     </select>
     <button id="searchButton">Search</button>
+    <ul id="matchesOut">
+        
+    </ul>
 </body>
 </html>
